<resources>
    <string name="app_name">UngDungDocBao</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_setting">Cài đặt</string>
    <string name="title_favorite">Tin yêu thích</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_dang_nhap">Đăng nhập</string>
    <string name="title_quenmatkhau">Quên Mật Khẩu</string>
    <string name="password">Password</string>
    <string name="dang_nhap_bang_google">Đăng nhập bằng google</string>
    <string name="dang_nhap_bang_facebok">Đăng nhập bằng facebok</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="quen_mat_khau">Quên mật khẩu ?</string>
    <string name="tao_tai_khoan">Tạo tài khoản</string>
    <string name="email">Email</string>
    <string name="ng_y_xu_t_b_n">Ngày xuất bản:</string>
    <string name="ti_u">Tiêu đề:</string>
    <string name="noi_dung">Trước khi nhảy anh ta có chia sẻ rất nhiều điều mà anh ta đã trải qua loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum Trước khi nhảy anh ta có chia sẻ rất nhiều điều mà anh ta đã trải qua loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum Trước khi nhảy anh ta có chia sẻ rất nhiều điều mà anh ta đã trải qua loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum Trước khi nhảy anh ta có chia sẻ rất nhiều điều mà anh ta đã trải qua loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum</string>
    <string name="noi_dung1">1 nam thanh niên nhảy lầu tự tử vì quá nhiều deadline dí đến đít anh ta loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum loremisum ss</string>
    <string name="t_c_gi">Tác Giả:</string>
    <string name="tin_da_xem">Tin đã xem</string>
    <string name="facebook_app_id">435149234314005</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="ng_xu_t">Đăng xuất</string>
    <string name="taikhoan">Tài Khoản</string>
    <string name="dangnhap">Đăng Nhập</string>
    <string name="hoat_dong">Hoạt Động</string>
    <string name="b_nh_lu_n_g_n_y">Bình Luận Gần Đây</string>
    <string name="t_y_ch_nh">Tùy Chỉnh</string>
    <string name="n_n_t_i">Nền Tối</string>
    <string name="li_n_h">Liên Hệ</string>
    <string name="todo">TODO</string>
    <string name="thi_t_l_p">Thiết lập</string>
    <string name="cmt_gan">Bình luận gần đây của bạn</string>

</resources>